--- a/P3_PAYS_code/src/sass/components/loader.scss
+++ b/P3_PAYS_code/src/sass/components/loader.scss
@@ -5,10 +5,12 @@
         border-radius: 50%;
         width: 45px;
         height: 45px;
-        left: 50%;
-        top:50%;
+        left: 40%;
+        top:15%;
         opacity: 1;
+        z-index: -1;
         visibility: hidden;
+        position: absolute;
         animation: spin 1s linear infinite, displayLoader 3s;
     }
 
@@ -30,18 +32,22 @@
 @keyframes displayLoader {
     0% {
         visibility: visible;
+        z-index: 100
     }
 
     100% {
         visibility: hidden;
+        z-index: -1;
     }
 }
 
 @keyframes out {
-    99% {
+    0%  {
         opacity: 0;
     }
-
+    90%  {
+        opacity: 0;
+    }
     100% {
         opacity: 1;
     }
