--- a/P3_PAYS_code/src/sass/main.css
+++ b/P3_PAYS_code/src/sass/main.css
@@ -76,6 +76,13 @@ a {
   overflow: hidden;
 }
 
+@media (min-width: 768px) {
+  .container-global {
+    max-width: 800px;
+    padding: 20px;
+  }
+}
+
 .container-location {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -174,8 +181,10 @@ a {
   border-radius: 25px;
   height: 65px;
   padding: 0px 40px;
+  position: relative;
   -webkit-box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.18);
           box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.18);
+  max-width: 370px;
 }
 
 .functioning-item--active {
@@ -183,7 +192,7 @@ a {
 }
 
 .functioning-item__circle {
-  position: relative;
+  position: absolute;
   height: 20px;
   width: 20px;
   background-color: #9356DC;
@@ -197,7 +206,7 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  right: 18%;
+  left: -1%;
 }
 
 .functioning-item__circle > p {
@@ -250,6 +259,21 @@ a {
   margin-bottom: 15px;
 }
 
+.restaurant-container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 20px;
+}
+
 .restaurant-item {
   border-radius: 15px;
   background-color: white;
@@ -264,6 +288,7 @@ a {
           flex-direction: column;
   width: 100%;
   position: relative;
+  max-width: 400px;
   -webkit-box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.18);
           box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.18);
 }
@@ -584,22 +609,22 @@ a {
 }
 
 .menu-item:nth-child(3) {
-  -webkit-animation: showMenu 3250ms;
-          animation: showMenu 3250ms;
+  -webkit-animation: showMenu 1, 30s;
+          animation: showMenu 1, 30s;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
 
 .menu-item:nth-child(4) {
-  -webkit-animation: showMenu 4250ms;
-          animation: showMenu 4250ms;
+  -webkit-animation: showMenu 1, 40s;
+          animation: showMenu 1, 40s;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
 
 .menu-item:nth-child(5) {
-  -webkit-animation: showMenu 5250ms;
-          animation: showMenu 5250ms;
+  -webkit-animation: showMenu 1, 50s;
+          animation: showMenu 1, 50s;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
