--- a/P3_PAYS_code/src/sass/pages/homepage.scss
+++ b/P3_PAYS_code/src/sass/pages/homepage.scss
@@ -63,15 +63,15 @@
         border-radius: 25px;
         height: 65px;
         padding: 0px 40px;
-
+        position: relative;
         @include shadow-obj;
-
-        &--active {
+        max-width: 370px;
+         &--active {
             background-color: rgba($color-primary, 0.1)
         }
 
         &__circle {
-            position: relative;
+            position: absolute;
             height: 20px;
             width: 20px;
             background-color: $color-primary;
@@ -79,7 +79,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            right:18%;
+            left:-1%;
             >p {
                 color: white;
                 font-size: 12px;
@@ -114,10 +114,17 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
-
     &-text {
         margin-top: 25px;
         margin-bottom: 15px;
+    }
+
+    &-container{
+        flex-wrap: wrap;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap:20px;
     }
 
     &-item {
@@ -129,8 +136,8 @@
         flex-direction: column;
         width: 100%;
         position: relative;
+        max-width: 400px;
         @include shadow-obj;
-
         &__image {
             border-radius: 15px 15px 0px 0px;
             object-fit: cover;
