--- a/P3_PAYS_code/src/sass/pages/menu.scss
+++ b/P3_PAYS_code/src/sass/pages/menu.scss
@@ -114,7 +114,7 @@
 
 @for $i from 3 to 6 {
     .menu-item:nth-child(#{$i}){
-        animation: showMenu #{$i}250ms;
+        animation: showMenu 1,#{$i}0s;
         animation-delay: 120ms;
     }
 }
