--- a/P3_PAYS_code/src/sass/base/general.scss
+++ b/P3_PAYS_code/src/sass/base/general.scss
@@ -39,7 +39,9 @@ a{
 
 @media (min-width: 768px) {
     .container-global{
-        max-width: 800px;
-        padding: 20px;
+        max-width: 1280px;
+    }
+    .huge-text{
+        font-size: 30px;
     }
 }
