--- a/P3_PAYS_code/src/sass/layout/header.scss
+++ b/P3_PAYS_code/src/sass/layout/header.scss
@@ -14,3 +14,12 @@
         right: 15%;
     }
 }
+
+@media (min-width: 768px) {
+    .header{
+        padding: 15px;
+        &-arrow{
+            font-size: 35px;
+        }
+    }
+}
