--- a/P3_PAYS_code/src/sass/pages/menu.scss
+++ b/P3_PAYS_code/src/sass/pages/menu.scss
@@ -114,7 +114,7 @@
 
 @for $i from 3 to 6 {
     .menu-item:nth-child(#{$i}){
-        animation: showMenu 1,#{$i}0s;
+        animation: showMenu #{$i}250ms;
         animation-delay: 120ms;
     }
 }
@@ -130,4 +130,17 @@
         margin: 10px 0px;
     }
     
+}
+
+@media (min-width: 768px) {
+    .menu{
+        align-self: center;
+        &-item{
+            min-width: 500px;
+        }
+        &-container {
+            align-items: center;
+    
+        }
+    }
 }
