--- a/P3_PAYS_code/src/sass/base/general.scss
+++ b/P3_PAYS_code/src/sass/base/general.scss
@@ -39,9 +39,12 @@ a{
 
 @media (min-width: 768px) {
     .container-global{
-        max-width: 1280px;
+        max-width: 1500px;
     }
     .huge-text{
         font-size: 30px;
+    }
+    .text{
+        font-size: 24px;
     }
 }
