--- a/P3_PAYS_code/src/sass/components/loader.scss
+++ b/P3_PAYS_code/src/sass/components/loader.scss
@@ -3,14 +3,12 @@
         border: 10px solid $color-gray;
         border-top: 10px solid $color-primary;
         border-radius: 50%;
-        width: 45px;
-        height: 45px;
-        left: 40%;
-        top:15%;
+        margin: auto;
+        width: 0px;
+        height: 0px;
         opacity: 1;
         z-index: -1;
         visibility: hidden;
-        position: absolute;
         animation: spin 1s linear infinite, displayLoader 3s;
     }
 
@@ -31,11 +29,15 @@
 
 @keyframes displayLoader {
     0% {
+        width: 45px;
+        height: 45px;
+        margin-top: 25%;
         visibility: visible;
         z-index: 100
     }
 
     100% {
+        margin-top: 25%;
         visibility: hidden;
         z-index: -1;
     }
