--- a/P3_PAYS_code/src/sass/main.css
+++ b/P3_PAYS_code/src/sass/main.css
@@ -87,10 +87,13 @@ a {
 
 @media (min-width: 768px) {
   .container-global {
-    max-width: 1280px;
+    max-width: 1500px;
   }
   .huge-text {
     font-size: 30px;
+  }
+  .text {
+    font-size: 24px;
   }
 }
 
@@ -644,22 +647,29 @@ a {
 }
 
 .menu-item:nth-child(3) {
-  -webkit-animation: showMenu 3250ms;
-          animation: showMenu 3250ms;
+  -webkit-animation: showMenu 1399ms;
+          animation: showMenu 1399ms;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
 
 .menu-item:nth-child(4) {
-  -webkit-animation: showMenu 4250ms;
-          animation: showMenu 4250ms;
+  -webkit-animation: showMenu 1499ms;
+          animation: showMenu 1499ms;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
 
 .menu-item:nth-child(5) {
-  -webkit-animation: showMenu 5250ms;
-          animation: showMenu 5250ms;
+  -webkit-animation: showMenu 1599ms;
+          animation: showMenu 1599ms;
+  -webkit-animation-delay: 120ms;
+          animation-delay: 120ms;
+}
+
+.menu-item:nth-child(6) {
+  -webkit-animation: showMenu 1699ms;
+          animation: showMenu 1699ms;
   -webkit-animation-delay: 120ms;
           animation-delay: 120ms;
 }
@@ -686,46 +696,20 @@ a {
   }
 }
 
-@media (min-width: 768px) {
-  .menu {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-  }
-  .menu-item {
-    min-width: 500px;
-  }
-  .menu-container {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
 .heart {
   color: black;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-size: 24px;
-  position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
-.heart:active + .heart--active, .heart:hover + .heart--active {
+.heart:active .heart--active, .heart:hover .heart--active {
   z-index: 2;
   opacity: 1;
 }
 
 .heart--active {
-  position: absolute;
   color: #9356DC;
   font-size: 24px;
-  top: 32%;
-  left: 88%;
   z-index: 0;
   opacity: 0;
   -webkit-transform-origin: bottom;
@@ -734,23 +718,16 @@ a {
   transition: opacity 500ms linear;
 }
 
-.menu-heart {
-  top: 5%;
-  left: 93%;
-}
-
 .loader-item {
   border: 10px solid #F2F2F2;
   border-top: 10px solid #9356DC;
   border-radius: 50%;
-  width: 45px;
-  height: 45px;
-  left: 40%;
-  top: 15%;
+  margin: auto;
+  width: 0px;
+  height: 0px;
   opacity: 1;
   z-index: -1;
   visibility: hidden;
-  position: absolute;
   -webkit-animation: spin 1s linear infinite, displayLoader 3s;
           animation: spin 1s linear infinite, displayLoader 3s;
 }
@@ -784,10 +761,14 @@ a {
 
 @-webkit-keyframes displayLoader {
   0% {
+    width: 45px;
+    height: 45px;
+    margin-top: 25%;
     visibility: visible;
     z-index: 100;
   }
   100% {
+    margin-top: 25%;
     visibility: hidden;
     z-index: -1;
   }
@@ -795,10 +776,14 @@ a {
 
 @keyframes displayLoader {
   0% {
+    width: 45px;
+    height: 45px;
+    margin-top: 25%;
     visibility: visible;
     z-index: 100;
   }
   100% {
+    margin-top: 25%;
     visibility: hidden;
     z-index: -1;
   }
