--- a/P3_PAYS_code/src/sass/pages/menu.scss
+++ b/P3_PAYS_code/src/sass/pages/menu.scss
@@ -112,9 +112,9 @@
     }
 }
 
-@for $i from 3 to 6 {
+@for $i from 3 to 7 {
     .menu-item:nth-child(#{$i}){
-        animation: showMenu #{$i}250ms;
+        animation: showMenu 1#{$i}99ms;
         animation-delay: 120ms;
     }
 }
@@ -130,17 +130,4 @@
         margin: 10px 0px;
     }
     
-}
-
-@media (min-width: 768px) {
-    .menu{
-        align-self: center;
-        &-item{
-            min-width: 500px;
-        }
-        &-container {
-            align-items: center;
-    
-        }
-    }
 }
